# human-detection

./: .cproject  CMakeLists.txt  f  readme.md
app/: CMakeLists.txt  dataHandler.cpp  main.cpp  objectDetector.cpp
include/: dataHandler.h  objectDetector.h
result/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  dataHandlerMock.h  dataHandlerTest.cpp  main.cpp  objectDetectorTest.cpp
